--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
 </header>
 <div class="hero-gallery">
     <div class="gallery">
-        <img src="css/images/IMG_3088 2.JPG" alt="african-girl">
+        <img src="catwalk/css/images/woman sitting on a chair.jpeg" alt="african-girl">
     </div>
     <div class="gallery">
-            <img src="css/images/IMG_3087 2.JPG" alt="african-girl">
+            <img src="catwalk/css/images/man weaing a hat.jpeg" alt="african-girl">
     </div>
     <div class="gallery">
-                <img src="css/images/IMG_3089 2.JPG" alt="african-girl">
+                <img src="catwalk/css/images/woman on a chair.webp" alt="african-girl">
     </div>
 </div>
 <div>
-    <video src="https://www.pexels.com/video/female-models-behind-a-curtain-of-flowers-7255950/"></video>
+    <video src="https://www.pexels.com/video/female-models-behind-a-curtain-of-flowers-7255950/">
+        video here
+    </video>
 </div>
 
 
