--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
         video here
     </video>
 </div>
+<footer class="footer">
+    <ul class="social-media">
+        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" id="twitter"></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" id="youtube"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram" id="instagram"></i></a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook" id="facebook"></i></a></li>
+    </ul>
+<nav class="menu-bar-footer">
+    <ul id="menu-bar">
+      
+        <li><a href="make.html">Get in touch</a></li>
+    </ul>
+</nav>
 
+</footer>
 
 </body>
 </html>
