--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </nav>
     </div>
 </header>
+<div id="cover-text">
+    <h2>Ireland's leading modelling agency</h2>
+</div>
+
 <div class="hero-gallery">
     <div class="gallery">
         <img src="catwalk/css/images/woman sitting on a chair.jpeg" alt="african-girl">
