--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 </head>
 <body>
     <header>
-        <div class="wrapper">
+        <div>
            <nav>
             <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
             <div class="hov">Menu 
             <ul class="main">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="models.html">Our Models</a></li>
-                <li><a href="make.html">Contact Us</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="models.html">Models</a></li>
+                <li><a href="make.html">Contact</a></li>
             </ul>
         </div>
         </nav>
@@ -45,8 +45,8 @@
     </div>
 </div>
 <div>
-    <video src="https://www.pexels.com/video/female-models-behind-a-curtain-of-flowers-7255950/">
-        video here
+    <video class="video" src="catwalk/css/images/pexels-video.mp4">
+       
     </video>
 </div>
 <footer class="footer">
