add footer media queiries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="wrapper">
            <nav>
             <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
             <div class="hov">Menu 
@@ -44,17 +44,13 @@
                 <img src="catwalk/css/images/woman on a chair.webp" alt="african-girl">
     </div>
 </div>
-<div>
-    <video class="video" src="catwalk/css/images/pexels-video.mp4">
-       
-    </video>
-</div>
-<footer class="footer">
+
+<footer class="wrapper">
     <ul class="social-media">
-        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" id="twitter"></i></a></li>
-        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" id="youtube"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram" id="instagram"></i></a></li>
-        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook" id="facebook"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" id="twitter"> twitter</i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" id="youtube"> Youtube</i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram" id="instagram"> Instagram</i></a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook" id="facebook"> Facebook</i></a></li>
     </ul>
 <nav class="menu-bar-footer">
     <ul id="menu-bar">
