add about text and form

--- a/models.html
+++ b/models.html
@@ -27,3 +27,26 @@
         </nav>
     </div>
 </header>
+</header>
+<div class="portafolio">
+    <div class="gallery">
+        <img src="catwalk/css/images/man in a suit.jpeg" alt="man-in-suit">
+        <di class="desc">Michael</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/man with long hair.jpeg" alt="long-hair">
+        <di class="desc">Stephen</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/white suit.jpeg" alt="white-suit">
+        <di class="desc">Sarah</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/woman on a chair.webp" alt="african-girl">
+        <di class="desc">Ciara</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/man weaing a hat.jpeg" alt="african-girl">
+        <di class="desc">Edward</di>
+    </div>
+   
