add cover text image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,53 +14,58 @@
     <title>Runway Models</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="wrapper">
-           <nav>
-            <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
-            <div class="hov">Menu 
-            <ul class="main">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="models.html">Models</a></li>
-                <li><a href="make.html">Contact</a></li>
-            </ul>
+            <nav>
+                <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
+                <div class="hov">Menu
+                    <ul class="main">
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="models.html">Models</a></li>
+                        <li><a href="make.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-        </nav>
-    </div>
-</header>
-<div id="cover-text">
-    <h2>Ireland's leading modelling agency</h2>
-</div>
+    </header>
 
-<div class="hero-gallery">
-    <div class="gallery">
-        <img src="catwalk/css/images/woman sitting on a chair.jpeg" alt="african-girl">
-    </div>
-    <div class="gallery">
-            <img src="catwalk/css/images/man weaing a hat.jpeg" alt="african-girl">
-    </div>
-    <div class="gallery">
-                <img src="catwalk/css/images/woman on a chair.webp" alt="african-girl">
-    </div>
-</div>
+    <section id="cover-text">
+        <h2>Ireland's leading modelling agency</h2>
+    </section>
 
-<footer class="wrapper">
-    <ul class="social-media">
-        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" id="twitter"> twitter</i></a></li>
-        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" id="youtube"> Youtube</i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram" id="instagram"> Instagram</i></a></li>
-        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook" id="facebook"> Facebook</i></a></li>
-    </ul>
-<nav class="menu-bar-footer">
-    <ul id="menu-bar">
+    <section class="hero-gallery">
+
+        <div>
+            <p class="text-1">This Right here is a bunch of texts that i wanna use</p>
+            <a class="text-link" href="make.html">Become a model</a>
+        </div>
+
+        <div>
+            <div class="gallery">
+                <img src="catwalk/css/images/woman-sitting-on-a-chair.jpeg" alt="african-girl">
+            </div>
+            
       
-        <li><a href="make.html">Get in touch</a></li>
-    </ul>
-</nav>
+    </section>
 
-</footer>
+   
+
+    <footer class="wrapper">
+        <ul class="social-media">
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"
+                        id="twitter"> twitter</i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"
+                        id="youtube"> Youtube</i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"
+                        id="instagram"> Instagram</i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"
+                        id="facebook"> Facebook</i></a></li>
+        </ul>
+    </footer>
 
 </body>
+
 </html>
