--- a/models.html
+++ b/models.html
@@ -18,9 +18,9 @@
             <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
             <div class="hov">Menu 
             <ul class="main">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="models.html">Models</a></li>
+                <li><a href="models.html" class="active">Models</a></li>
                 <li><a href="make.html">Contact</a></li>
             </ul>
         </div>
