--- a/make.html
+++ b/make.html
@@ -27,7 +27,7 @@
         </nav>
     </div>
 </header>
-<section id="form-section" >
+<section id="form-section" class="form-image">
     
     <form method="post" action="https://outlook.live.com/mail/0/" class="signup-form">
         <h2>Make enquiry</h2>
