--- a/about.html
+++ b/about.html
@@ -27,7 +27,14 @@
         </nav>
     </div>
 </header>
+<section class="about-image">
 <div id="we-are">
     <h2>We are runway models</h2>
     <p id="we-are-p">A modern agency based in the heart of Dublin City. We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally. We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
 </div>
+</section>
+
+
+</body>
+
+</html>
