--- a/about.html
+++ b/about.html
@@ -33,7 +33,18 @@
     <p id="we-are-p">A modern agency based in the heart of Dublin City. We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally. We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
 </div>
 </section>
-
+<footer class="wrapper">
+    <ul class="social-media">
+        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"
+                    id="twitter"> twitter</i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"
+                    id="youtube"> Youtube</i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"
+                    id="instagram"> Instagram</i></a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"
+                    id="facebook"> Facebook</i></a></li>
+    </ul>
+</footer>
 
 </body>
 
