final changes phase two

--- a/models.html
+++ b/models.html
@@ -59,6 +59,39 @@
     <di class="desc">Ciara</di>
 </div>
 </section>
+
+<section>
+    <div class="portafolio">
+        <div class="gallery">
+            <img src="catwalk/css/images/man-with-a-suit.jpeg" alt="man-in-suit">
+            <di class="desc">Michael</di>
+        </div>
+        <div class="gallery">
+            <img src="catwalk/css/images/woman-on-a-chair.jpeg" alt="woman-on-a-chair">
+            <di class="desc">Stephen</di>
+        </div>
+        <div class="gallery">
+            <img src="catwalk/css/images/white-suit.jpeg" alt="white-suit">
+            <di class="desc">Sarah</di>
+        </div>
+        <div class="gallery">
+            <img src="catwalk/css/images/grayscale of a man.jpeg" alt="grayscale-of-a-man">
+            <di class="desc">Ciara</di>
+        </div>
+        <div class="gallery">
+            <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="painted-faces">
+            <di class="desc">Edward</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="man-wearing-a-hat">
+        <di class="desc">Ciara</di>
+    </div>
+    <div class="gallery">
+        <img src="catwalk/css/images/man-with-long-hair.jpeg" alt="man-with-long-hair">
+        <di class="desc">Ciara</di>
+    </div>
+    </section>
+    
 <footer class="wrapper">
     <ul class="social-media">
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"
