finish image gallery

--- a/models.html
+++ b/models.html
@@ -27,52 +27,70 @@
         </nav>
     </div>
 </header>
-</header>
-<section>
+<section class="gallery">
+    <div class="img-galley">
+        <div class="box">
+            <img src="catwalk/css/images//happy-man.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/fit-woman.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/gray-scale-or-a-woman.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images//white-and-green.JPG" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/man-with-a-suit.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/brothers.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images//two-models.jpg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/woman-sitting-on-a-chair.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/woman-with-head-up.webp" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/woman-on-a-chair.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/two-men-in-white.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
+        <div class="box">
+            <img src="catwalk/css/images/white-suit.jpeg" alt="">
+            <div class="decs">names</div>
+        </div>
 
-<section>
-    <div class="portafolio">
-        <div class="gallery">
-            <img src="catwalk/css/images/fit-woman.jpeg" alt="african-girl">
-        </div>
-        <div class="gallery">
-            <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="african-girl">
-        </div>
-        <div class="gallery">
-            <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="african-girl">
-        </div>
-        <div class="gallery">
-            <img src="catwalk/css/images/white-suit.jpeg" alt="african-girl">
-        </div>
-        <div class="gallery">
-            <img src="catwalk/css/images/man-with-long-hair.jpeg" alt="african-girl">
-        </div>
-        <div class="gallery">
-            <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="african-girl">
-        </div>
-    </section>
+        
+    </div>
+</section>
 
-    <section>
-        <div class="portafolio">
-            <div class="gallery">
-                <img src="catwalk/css/images/fit-woman.jpeg" alt="african-girl">
-            </div>
-            <div class="gallery">
-                <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="african-girl">
-            </div>
-            <div class="gallery">
-                <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="african-girl">
-            </div>
-            <div class="gallery">
-                <img src="catwalk/css/images/white-suit.jpeg" alt="african-girl">
-            </div>
-            <div class="gallery">
-                <img src="catwalk/css/images/man-with-long-hair.jpeg" alt="african-girl">
-            </div>
-            <div class="gallery">
-                <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="african-girl">
-            </div>
-        </section>
+
     
 <footer class="wrapper">
     <ul class="social-media">
