final changes phase four

--- a/models.html
+++ b/models.html
@@ -30,60 +30,60 @@
 <section class="gallery">
     <div class="img-galley">
         <div class="box">
-            <img src="catwalk/css/images//happy-man.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/happy-man.jpeg" alt="happy-man">
+            <div class="img-desc">Stephen</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/fit-woman.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/fit-woman.jpeg" alt="fit-woman">
+            <div class="img-desc">Ciara</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/artistic-painted-face.jpeg" alt="artistic-painted-face">
+            <div class="img-desc">Tom & Marta</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/gray-scale-or-a-woman.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/woman-in-heels.jpeg" alt="woman-in-heels">
+            <div class="img-desc">Katherine</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images//white-and-green.JPG" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images//white-and-green.JPG" alt="white-and-green">
+            <div class="img-desc">Miguel</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/man-with-a-suit.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/man-with-a-suit.jpeg" alt="man-with-a-suit">
+            <div class="img-desc">Edward</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/brothers.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/brothers.jpeg" alt="brothers">
+            <div class="img-desc">Zac & Ben</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="three-men-wearing-white">
+            <div class="img-desc">the Daniels</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images//two-models.jpg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images//two-models.jpg" alt="two-models">
+            <div class="img-desc">Ciara & Sarah</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/woman-sitting-on-a-chair.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/woman-sitting-on-a-chair.jpeg" alt="woman-sitting-on-a-chair">
+            <div class="img-desc">Joice</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/woman-with-head-up.webp" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/woman-with-head-up.webp" alt="woman-with-head-up">
+            <div class="img-desc">Alenka</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/woman-on-a-chair.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/woman-on-a-chair.jpeg" alt="woman-on-a-chair">
+            <div class="img-desc">Sinead</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/two-men-in-white.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/two-men-in-white.jpeg" alt="two-men-in-white">
+            <div class="img-desc">Paul & Ed</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images/white-suit.jpeg" alt="">
-            <div class="decs">names</div>
+            <img src="catwalk/css/images/white-suit.jpeg" alt="white-suit">
+            <div class="img-desc">Nakusha</div>
         </div>
 
         
