--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class="wrapper">
+        <div>
             <nav>
                 <h1><a class="logo" href="index.html">Runway <span>Models</span></a></h1>
                 <div class="hov">Menu
@@ -32,15 +32,17 @@
         </div>
     </header>
 
-    <section id="cover-text">
+    <section class="hero-image">
+        <div  id="cover-text">
         <h2>Ireland's leading modelling agency</h2>
+    </div>
     </section>
 
     <section class="hero-text">
 
         <div class="application">
           <h2><a class="text-link">Runway Models</a></h2>
-          <p>Irelands leading and longest established Model Agency supplying talent and creatives to the Fashion, Advertising and Acting Industries.
+          <p>Irelands leading and longest established Model Agency supplying talent and creatives to the Fashion, Advertising and Acting. <br>
             We provide a complete service, supplying Models, Photographers, Fashion Stylists, Make up Artists, Hair Dressers, Actors, Commercial Talent and Personalities, as well as production services to a very broad and ever expanding list of clients.</p>
        
     </div>
