final changes phase six

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="runway-models-agency">
     <link rel="stylesheet" href="catwalk/css/index.css">
     <link rel="about-page" href="about.html">
-    <title>Runway Models</title>
+    <title>Runway Models - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
