--- a/models.html
+++ b/models.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="runway-models-agency">
     <link rel="stylesheet" href="catwalk/css/index.css">
     <link rel="models-page" href="models.html">
-    <title>Runway Models</title>
+    <title>Runway Models - Models</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
