change about text position

--- a/about.html
+++ b/about.html
@@ -30,14 +30,18 @@
 <section class="about-image">
 <div id="we-are">
     <h2>We are runway models</h2>
-    <p id="we-are-p">A modern agency based in the heart of Dublin City. We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally.
-         We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
 </div>
 </section>
 <section class="hero-text">
 
     <div class="application">
-      <h2><a class="text-link" href="make.html">Become a model</a></h2>
+        <h2><a class="text-link">Who we are</a></h2>
+        <p>A modern agency based in the heart of Dublin City. We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally.
+            We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
+      </div>
+
+    <div class="application">
+      <h2><a class="text-link" id="text-link" href="make.html">Become a model</a></h2>
       <p>If you are 5’8″ or above (Women) / 6' or above (Men) then please send us one headshot, one profile, one smiling, and one full length photo 
         with your contact details, age, height, bust, waist and hip measurements to info@morgantheagency.com We do not require professional photos, camera phone digitals are fine.
          Please NO FILTERS, NO TAN, NO MAKEUP, NO SELFIES.  Natural photos where we can see your skin and hair clearly.
