--- a/models.html
+++ b/models.html
@@ -59,7 +59,7 @@
         </div>
         <div class="box">
             <img src="catwalk/css/images/three-men-wearing-white.jpeg" alt="three-men-wearing-white">
-            <div class="img-desc">the Daniels</div>
+            <div class="img-desc">The Daniels</div>
         </div>
         <div class="box">
             <img src="catwalk/css/images//two-models.jpg" alt="two-models">
