--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero-text">
 
         <div class="application">
-          <h2><a class="text-link">Runway Models</a></h2>
+          <h2 class="text-link">Runway Models</h2>
           <p>Irelands leading and longest established Model Agency supplying talent and creatives to the Fashion, Advertising and Acting. <br>
             We provide a complete service, supplying Models, Photographers, Fashion Stylists, Make up Artists, Hair Dressers, Actors, Commercial Talent and Personalities, as well as production services to a very broad and ever expanding list of clients.</p>
        
