--- a/models.html
+++ b/models.html
@@ -27,7 +27,7 @@
         </nav>
     </div>
 </header>
-<section class="gallery">
+<div class="gallery">
     <div class="img-galley">
         <div class="box">
             <img src="catwalk/css/images/happy-man.jpeg" alt="happy-man">
@@ -88,7 +88,7 @@
 
         
     </div>
-</section>
+</div>
 
 
     
