--- a/about.html
+++ b/about.html
@@ -34,13 +34,13 @@
 </section>
 <section class="hero-text">
 
-    <div class="application">
+    <div>
         <h2><a class="text-link">Who we are</a></h2>
         <p>A modern agency based in the heart of Dublin City. <br> We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally. <br>
             We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
       </div>
 
-    <div class="application">
+    <div>
       <h2><a class="text-link" id="text-link" href="make.html">Become a model</a></h2>
       <p>If you are 5’8″ or above (Women) / 6' or above (Men) then please send us one headshot, one profile, one smiling, and one full length photo 
         with your contact details, age, height, bust, waist and hip measurements to <strong>info@runwaymodelsagency.com</strong> <br>
@@ -48,7 +48,7 @@
          Please NO FILTERS, NO TAN, NO MAKEUP, NO SELFIES. <br> Natural photos where we can see your skin and hair clearly.
         We do our best to reply to all submissions but due to the volume we receive it is not always feasible.</p>
     </div>
-    <div class="application">
+    <div>
         <h2><a class="text-link">Our story</a></h2>
 
         <p>Runway Models Agency is the longest established International Model Agency in Ireland. Stablished in 1973, by Jose Parra <span>Runway Models </span> has proudly been ireland's leading medelling agency. <br>
@@ -56,7 +56,7 @@
           <br><span>Runway Models </span> went from strength to strength in all areas, including the International arena where we forged strong relationships with agencies across the globe becoming the first port of call for clients coming to Ireland to work and source new <strong>talent.</strong>  <br> We now have a wide representation of talent dotted around the globe.</p>
      
   </div>
-  <div class="application">
+  <div>
     <h2><a class="text-link">Services</a></h2>
     <p><span>Runway Models </span> provide a complete service supplying Models, Photographers, Fashion Stylists, Make-up & Hair Artists, Actors, Commercial talent, Influencers and Personalities, to a broad and ever expanding list of clients.
         Spotting, encouraging and developing talent is at the core of our agencies ethos, the mainstay of our success.</p>
