--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
     <section class="hero-text">
 
-        <div class="application">
+        <div class="text-image">
+            <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="man-weaing-a-hat">
           <h2 class="text-link">Runway Models</h2>
           <p>Irelands leading and longest established Model Agency supplying talent and creatives to the Fashion, Advertising and Acting. <br>
             We provide a complete service, supplying Models, Photographers, Fashion Stylists, Make up Artists, Hair Dressers, Actors, Commercial Talent and Personalities, as well as production services to a very broad and ever expanding list of clients.</p>
-       
+          
     </div>
     </section>
 
