--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <section class="hero-text">
 
     <div>
-        <h2><a class="text-link">Who we are</a></h2>
+        <h2  class="text-link">Who we are </h2>
         <p>A modern agency based in the heart of Dublin City. <br> We represent Actors for film, television and stage; and Models for editorial, catalogue and show, both in Ireland and internationally. <br>
             We provide casting solutions and cast management for advertising, commercial and digital, including Child Models and Family Casting.</p>
       </div>
@@ -49,7 +49,7 @@
         We do our best to reply to all submissions but due to the volume we receive it is not always feasible.</p>
     </div>
     <div>
-        <h2><a class="text-link">Our story</a></h2>
+        <h2 class="text-link">Our story </h2>
 
         <p>Runway Models Agency is the longest established International Model Agency in Ireland. Stablished in 1973, by Jose Parra <span>Runway Models </span> has proudly been ireland's leading medelling agency. <br>
      <br> Over the years, in its quest for perfection, the agency expanded internationally increasing our portfolio of models and business substantially. <br>
@@ -57,7 +57,7 @@
      
   </div>
   <div>
-    <h2><a class="text-link">Services</a></h2>
+    <h2 class="text-link">Services</h2>
     <p><span>Runway Models </span> provide a complete service supplying Models, Photographers, Fashion Stylists, Make-up & Hair Artists, Actors, Commercial talent, Influencers and Personalities, to a broad and ever expanding list of clients.
         Spotting, encouraging and developing talent is at the core of our agencies ethos, the mainstay of our success.</p>
  
