add gallery text

--- a/models.html
+++ b/models.html
@@ -27,6 +27,8 @@
         </nav>
     </div>
 </header>
+<section>
+    <h3 class="models-text" >Comercial models</h3>
 <div class="gallery">
     <div class="img-galley">
         <div class="box">
@@ -90,7 +92,7 @@
     </div>
 </div>
 
-
+</section>
     
 <footer class="wrapper">
     <ul class="social-media">
