--- a/models.html
+++ b/models.html
@@ -28,7 +28,7 @@
     </div>
 </header>
 <section>
-    <h3 class="models-text" >Comercial models</h3>
+    <h3 class="models-text" > " Beauty is being the best possible version of yoursefl on the inside and out "</h3>
 <div class="gallery">
     <div class="img-galley">
         <div class="box">
