--- a/models.html
+++ b/models.html
@@ -28,7 +28,7 @@
     </div>
 </header>
 <section>
-    <h2 class="models-text" > " Beauty is being the best possible version of yoursefl on the inside and out "</h2>
+    <h2 class="models-text" > " Beauty is being the best possible version of yourself on the inside and out "</h2>
 <div class="gallery">
     <div class="img-galley">
         <div class="box">
@@ -48,7 +48,7 @@
             <div class="img-desc">Katherine</div>
         </div>
         <div class="box">
-            <img src="catwalk/css/images//white-and-green.JPG" alt="white-and-green">
+            <img src="catwalk/css/images/grayscale-of-a-shirtless-man.webp" alt="grayscale-of-a-shirtless-man">
             <div class="img-desc">Miguel</div>
         </div>
         <div class="box">
