--- a/make.html
+++ b/make.html
@@ -59,7 +59,7 @@
 <div class="container">
     <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="man-weaing-a-hat">
     <h2>Contact us</h2>
-    <h4>Address: 1 Merrion Street, Dublin 6, Ireland</h4>
+    <p>Address: 1 Merrion Street, Dublin 6, Ireland</p>
     <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.225911086397!2d-6.2520503!3d53.3392121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e975d419d83%3A0x75886f3a71bb7734!2s1%20Merrion%20Pl%2C%20Dublin%2C%20D02%20R129!5e0!3m2!1sen!2sie!4v1660985661383!5m2!1sen!2sie" width="450" height="190" style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
     </p>
 </div>
