README final changes 3

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+     <!-- logo and nav bar -->
     <header>
         <div>
            <nav>
@@ -27,11 +28,13 @@
         </nav>
     </div>
 </header>
+ <!-- about section with who we are -->
 <section class="about-image">
 <div id="we-are">
     <h2>We are runway models</h2>
 </div>
 </section>
+ <!-- description texts -->
 <section class="hero-text">
 
     <div>
@@ -64,6 +67,7 @@
 </div>
     
 </section>
+ <!-- footer -->
 <footer class="wrapper">
     <ul class="social-media">
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"
