--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+     <!-- logo and nav bar -->
     <header>
         <div>
             <nav>
@@ -31,13 +32,14 @@
             </nav>
         </div>
     
-
+ <!-- hero image and cover text -->
     <section class="hero-image">
         <div  id="cover-text">
         <h2>Ireland's leading modelling agency</h2>
     </div>
     </section>
 </header>
+ <!-- here text section (for description)  -->
 
     <section class="hero-text">
 
@@ -50,7 +52,7 @@
     </div>
     </section>
 
-   
+    <!-- foorter -->
 
     <footer class="wrapper">
         <ul class="social-media">
