--- a/make.html
+++ b/make.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+     <!-- logo and nav bar -->
     <header>
         <div>
            <nav>
@@ -27,6 +28,7 @@
         </nav>
     </div>
 </header>
+ <!-- form section -->
 <section id="form-section" class="form-image">
     
     <form method="post" action="https://outlook.live.com/mail/0/" class="signup-form">
@@ -55,6 +57,7 @@
     </form>
 
 </section>
+ <!-- contact container -->
 <section>
 <div class="container">
     <img src="catwalk/css/images/man-weaing-a-hat.jpeg" alt="man-weaing-a-hat">
