--- a/models.html
+++ b/models.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+ <!-- logo and nav bar -->
+
     <header>
         <div>
            <nav>
@@ -27,6 +29,8 @@
         </nav>
     </div>
 </header>
+ <!-- models gallery and names  -->
+
 <section>
     <h2 class="models-text" > " Beauty is being the best possible version of yourself on the inside and out "</h2>
 <div class="gallery">
@@ -93,6 +97,7 @@
 </div>
 
 </section>
+ <!-- footer -->
     
 <footer class="wrapper">
     <ul class="social-media">
